--- a/internal/pkg/views/index.html
+++ b/internal/pkg/views/index.html
@@ -9,7 +9,7 @@
         <select class="form-select" id="inputGroupSelect">
             <!-- <option >Choose...</option> -->
             <option value="Twitter" selected>Twitter</option>
-            <option value="Youtube" >Youtube</option>
+            <option value="Youtube">Youtube</option>
             <option value="Instagram">Instagram</option>
         </select>
     </div>
@@ -22,10 +22,15 @@
             Use Best Quality.
         </label>
     </div>
-    <div id="results">
-        <input type="button" onClick="btnSearch()" class="btn btn-primary" value="Download">
+    <div class="progress my-4" role="progressbar" aria-label="Animated striped example" aria-valuenow="75"
+        aria-valuemin="0" aria-valuemax="100" style="height: 30px; display: none;" id="progressBar">
+        <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 0%">
+            <div id="log"> </div>
+        </div>
     </div>
-
+    <div id="results">
+        <input type="button" onClick="btnSearch()" class="btn btn-primary" id="searchButton" value="Download">
+    </div>
 </div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
@@ -34,5 +39,5 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
     crossorigin="anonymous"></script>
-<script src="./scripts/dummy.js"></script>
+<script src="./scripts/function.js"></script>
 {{template "partials/footer" .}}
