--- a/internal/pkg/views/index.html
+++ b/internal/pkg/views/index.html
@@ -8,8 +8,8 @@
         <label class="input-group-text" for="inputGroupSelect01">Platforms</label>
         <select class="form-select" id="inputGroupSelect">
             <!-- <option >Choose...</option> -->
-            <option value="Twitter" selected>Twitter</option>
-            <option value="Youtube">Youtube</option>
+            <option value="Twitter" >Twitter</option>
+            <option value="Youtube" selected>Youtube</option>
             <option value="Instagram">Instagram</option>
         </select>
     </div>
